--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
+/* Base styles */
 * {
     margin: 0;
     padding: 0;
-    font-family: 'Poppins', 'sans-sarif';
+    font-family: 'Poppins', 'sans-serif';
     box-sizing: border-box;
 }
 
@@ -11,7 +12,7 @@ body {
 
 .card {
     width: 90%;
-    max-width: 470px;
+    max-width: 800px;
     background: linear-gradient(135deg, #00feba, #5b548a);
     color: #fff;
     margin: 100px auto 0;
@@ -57,30 +58,26 @@ body {
 .weather-icon {
     width: 170px;
     margin-top: 30px;
-
 }
 
 .weather h1 {
     font-size: 88px;
     font-weight: 500;
-
 }
 
 .weather h2 {
     font-size: 45px;
     font-weight: 400;
     margin-top: -10px;
-    
 }
 
-.details{
+.details {
     display: flex;
     align-items: center;
     justify-content: space-between;
     padding: 0 20px;
     margin-top: 50px;
 }
-
 
 .col {
     display: flex;
@@ -108,4 +105,128 @@ body {
     font-size: 14px;
     margin-top: 10px;
     display: none;
+}
+
+/* Media Queries for responsiveness */
+
+/* Small screens (phones) */
+@media (max-width: 576px) {
+    .search input {
+        padding: 10px;
+        font-size: 16px;
+    }
+
+    .search button {
+        width: 50px;
+        height: 50px;
+    }
+
+    .weather-icon {
+        width: 120px;
+    }
+
+    .weather h1 {
+        font-size: 60px;
+    }
+
+    .weather h2 {
+        font-size: 30px;
+    }
+
+    .details {
+        flex-direction: column;
+    }
+
+    .details .col {
+        margin-bottom: 20px;
+    }
+
+    .details .col img {
+        width: 30px;
+    }
+
+    .humidity, .wind {
+        font-size: 22px;
+    }
+}
+
+/* Medium screens (tablets) */
+@media (min-width: 577px) and (max-width: 768px) {
+    .search input {
+        padding: 12px;
+        font-size: 17px;
+    }
+
+    .search button {
+        width: 55px;
+        height: 55px;
+    }
+
+    .weather-icon {
+        width: 150px;
+    }
+
+    .weather h1 {
+        font-size: 70px;
+    }
+
+    .weather h2 {
+        font-size: 35px;
+    }
+
+    .details {
+        flex-direction: row;
+    }
+
+    .details .col {
+        margin: 0 10px;
+    }
+
+    .details .col img {
+        width: 35px;
+    }
+
+    .humidity, .wind {
+        font-size: 25px;
+    }
+}
+
+/* Large screens (desktops) */
+@media (min-width: 769px) {
+    .search input {
+        font-size: 18px;
+    }
+
+    .search button {
+        width: 60px;
+        height: 60px;
+    }
+
+    .weather-icon {
+        width: 170px;
+    }
+
+    .weather h1 {
+        font-size: 88px;
+    }
+
+    .weather h2 {
+        font-size: 45px;
+    }
+
+    .details {
+        padding: 0 20px;
+    }
+
+    .details .col {
+        margin: 0 10px;
+    }
+
+    .details .col img {
+        width: 40px;
+    }
+
+    .humidity, .wind {
+        font-size: 28px;
+    }
 }
